# dindinho

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  Makefile  README.md  SETUP.md  pyproject.toml  requirements.txt  run.py
.streamlit/: config.toml
backend/: config.py  database.py  main.py
backend/api/: categories.py  database.py  income_sources.py  reports.py  subscriptions.py  transactions.py  upload.py
backend/models/: category.py  ignored_transaction.py  income_source.py  name_mapping.py  subscription.py  transaction.py
backend/schemas/: database_export.py  import_preview.py  income_source.py  report.py  subscription.py  transaction.py
backend/services/: ai_categorizer.py  backup_service.py  category_service.py  csv_parser.py  database_clear_service.py  database_export_service.py  database_import_service.py  ignore_service.py  income_source_service.py  name_mapping_service.py  report_service.py  subscription_service.py  transaction_service.py
backend/utils/: currency_parser.py  date_parser.py
data/backups/: finance.db.backup.20260122_115915
frontend/: app.py
frontend/components/: category_chart.py  category_manager.py  category_pills.py  database_manager.py  ignore_list_manager.py  import_dialog.py  income_source_manager.py  month_selector.py  monthly_chart.py  subscription_tracker.py  top_transactions.py  transaction_table.py
frontend/utils/: api_client.py  confirmation.py
tests/sample_data/: account_extract_sample.csv  credit_card_sample.csv
